# YADRO_intern

./: CMakeLists.txt  EventAndTable.h  Exceptions.h  functions.cpp  main.cpp  readme.md
test_examples/: bad_event_format.txt  bad_price_format.txt  bad_tables_format.txt  bad_time_format.txt  bad_time_sequence.txt  input2.txt  input3.txt
